--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -26,7 +26,7 @@ jobs:
       shell: pwsh
 
     - name: Build the project
-      run: msbuild MOTHER3SpriteEditor/MOTHER3SpriteEditor.csproj /p:Configuration=Release
+      run: dotnet build
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
