--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -21,7 +21,11 @@ jobs:
         run: nuget restore MOTHER3SpriteEditor.sln
 
       - name: Build with MSBuild
-        run: '"C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\Bin\MSBuild.exe" MOTHER3SpriteEditor.sln /p:Configuration=Release'
+        shell: pwsh
+        run: |
+          $msbuild = & "${env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vswhere.exe" `
+          -latest -requires Microsoft.Component.MSBuild -find MSBuild\**\Bin\MSBuild.exe
+          & "$msbuild" MOTHER3SpriteEditor.sln /p:Configuration=Release
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
