--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -31,4 +31,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Mother3SpriteEditor
-          path: '**/bin/Release/**'
+          path: 'MOTHER3SpriteEditor/bin/Release/**'
